# SystemMonitor

./: CMakeLists.txt  SystemMonitor_zh_CN.ts  cpuusageinfo.cpp  cpuusageinfo.h  diskinfo.cpp  diskinfo.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  memusageinfo.cpp  memusageinfo.h  netusageinfo.cpp  netusageinfo.h  osinfo.cpp  osinfo.h  systeminfo.cpp  systeminfo.h
